# Text-to-SQL-template

./: .env.sample  .gitignore  README.md
service/: .gitignore  Containerfile  pyproject.toml
service/src/service/: chart_service.py  db_service.py  dependencies.py  kernel.py  logging_config.py  main.py  mcp_server.py  models.py  prepare_collection.py  routes.py  settings.py  setup_test_split.py  tools.py
skill/: .env.sample  .gitignore  chart_classifier.py  chart_generation.py  chart_generator.py  pyproject.toml  qa.py  qa_test.py  schema.sql  sql_generation.py  tool_router.py
skill/evaluation/: benchmarks.py  dataset.py  logic.py  models.py  task.py
skill/evaluation/data/: test_split.json
ui/: package.json  pnpm-lock.yaml
ui/src/@core/models/api/: customRag.ts
ui/src/components/: DatabaseResultTable.vue  SqlDisplay.vue  UsecaseQaChatEntryAnswer.vue
ui/src/models/: UsecaseQaChatEntry.ts
ui/src/stores/: createStoreId.ts  usecaseQa.ts  usecaseQaChat.ts
ui/src/utils/: http.ts  sqlFormatter.ts
